fixed content jumping glitch on mobile (rework better fix at a later time)

--- a/styles.css
+++ b/styles.css
@@ -301,6 +301,10 @@ before this i was having problems with the anchor adding padding and a negative 
     margin-left: 105%;
   }
 }
+
+.mobile-view {
+  display: none;
+}
 @media screen and (min-width: 320px) and (max-width: 800px) {
   /* MEdia queries to adjust all of these relative to phone screens */
   .main-title {
@@ -417,5 +421,13 @@ before this i was having problems with the anchor adding padding and a negative 
 @media screen and (min-width: 600px) and (max-width: 900px) {
   .grid-container {
     grid-template-columns: repeat(auto-fit, 45%);
+  }
+}
+@media screen and (max-width: 559px) {
+  .desktop-view {
+    display: none;
+  }
+  .mobile-view {
+    display: initial;
   }
 }
